--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,49 +1,49 @@
-name: 🤖 Auto Merge
-
-on:
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
-
-permissions:
-  contents: write
-  pull-requests: write
-  checks: read
-
-jobs:
-  auto-merge:
-    name: 🤖 Auto Merge Dependencies
-    runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]' || contains(github.event.pull_request.labels.*.name, 'auto-merge')
-    
-    steps:
-      - name: 🔍 Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: ⏳ Wait for CI Checks
-        uses: fountainhead/action-wait-for-check@v1.2.0
-        id: wait-for-ci
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "📋 Test Summary"
-          ref: ${{ github.event.pull_request.head.sha }}
-          timeoutSeconds: 1800 # 30 minutes
-
-      - name: 🤖 Auto Merge PR
-        if: steps.wait-for-ci.outputs.conclusion == 'success'
-        uses: pascalgn/merge-action@v0.15.6
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          merge_method: squash
-          merge_commit_message: pull-request-title-and-description
-
-      - name: 📝 Comment on Failure
-        if: steps.wait-for-ci.outputs.conclusion != 'success'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '🚫 Auto-merge failed: CI checks did not pass. Please review manually.'
+name:  Auto Merge
+
+on:
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+
+permissions:
+  contents: write
+  pull-requests: write
+  checks: read
+
+jobs:
+  auto-merge:
+    name:  Auto Merge Dependencies
+    runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]' || contains(github.event.pull_request.labels.*.name, 'auto-merge')
+    
+    steps:
+      - name:  Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: ⏳ Wait for CI Checks
+        uses: fountainhead/action-wait-for-check@v1.2.0
+        id: wait-for-ci
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: " Test Summary"
+          ref: ${{ github.event.pull_request.head.sha }}
+          timeoutSeconds: 1800 # 30 minutes
+
+      - name:  Auto Merge PR
+        if: steps.wait-for-ci.outputs.conclusion == 'success'
+        uses: pascalgn/merge-action@v0.15.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          merge_method: squash
+          merge_commit_message: pull-request-title-and-description
+
+      - name:  Comment on Failure
+        if: steps.wait-for-ci.outputs.conclusion != 'success'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: ' Auto-merge failed: CI checks did not pass. Please review manually.'
             }) 
