--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,40 +1,40 @@
-name: 🔎 CodeQL Analysis
-
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
-  schedule:
-    # Run CodeQL analysis weekly on Sundays at 3 AM UTC
-    - cron: '0 3 * * 0'
-  workflow_dispatch:
-
-jobs:
-  analyze:
-    name: 🔎 Analyze Code
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
-
-    steps:
-      - name: 🔍 Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🔎 Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
-          # Auto-build for JavaScript/TypeScript
-          
-      - name: 🔎 Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
+name:  CodeQL Analysis
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
+  schedule:
+    # Run CodeQL analysis weekly on Sundays at 3 AM UTC
+    - cron: '0 3 * * 0'
+  workflow_dispatch:
+
+jobs:
+  analyze:
+    name:  Analyze Code
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript' ]
+
+    steps:
+      - name:  Checkout Repository
+        uses: actions/checkout@v4
+
+      - name:  Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+          # Auto-build for JavaScript/TypeScript
+          
+      - name:  Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
           category: "/language:${{matrix.language}}" 
