--- a/.github/workflows/label-manager.yml
+++ b/.github/workflows/label-manager.yml
@@ -1,54 +1,54 @@
-name: 🏷️ Label Manager
-
-on:
-  pull_request:
-    types: [opened, edited, synchronize]
-  issues:
-    types: [opened, edited]
-
-permissions:
-  contents: read
-  issues: write
-  pull-requests: write
-
-jobs:
-  label-pr:
-    name: 🏷️ Auto Label PR
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - name: 🔍 Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🏷️ Label PR by Size
-        uses: codelytv/pr-size-labeler@v1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_label: 'size/xs'
-          xs_max_size: 10
-          s_label: 'size/s'
-          s_max_size: 100
-          m_label: 'size/m'
-          m_max_size: 500
-          l_label: 'size/l'
-          l_max_size: 1000
-          xl_label: 'size/xl'
-
-      - name: 🏷️ Label by Changed Files
-        uses: actions/labeler@v5
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          configuration-path: .github/labeler.yml
-
-  label-issue:
-    name: 🏷️ Auto Label Issues
-    runs-on: ubuntu-latest
-    if: github.event_name == 'issues'
-    
-    steps:
-      - name: 🏷️ Label by Issue Content
-        uses: github/issue-labeler@v3.4
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+name: ️ Label Manager
+
+on:
+  pull_request:
+    types: [opened, edited, synchronize]
+  issues:
+    types: [opened, edited]
+
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
+jobs:
+  label-pr:
+    name: ️ Auto Label PR
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    
+    steps:
+      - name:  Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: ️ Label PR by Size
+        uses: codelytv/pr-size-labeler@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          xs_label: 'size/xs'
+          xs_max_size: 10
+          s_label: 'size/s'
+          s_max_size: 100
+          m_label: 'size/m'
+          m_max_size: 500
+          l_label: 'size/l'
+          l_max_size: 1000
+          xl_label: 'size/xl'
+
+      - name: ️ Label by Changed Files
+        uses: actions/labeler@v5
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          configuration-path: .github/labeler.yml
+
+  label-issue:
+    name: ️ Auto Label Issues
+    runs-on: ubuntu-latest
+    if: github.event_name == 'issues'
+    
+    steps:
+      - name: ️ Label by Issue Content
+        uses: github/issue-labeler@v3.4
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/issue-labeler.yml 
