Remove quotes from integer comparison in lint workflow
Updated shell script conditions in the lint.yml workflow to compare integer values without quotes, ensuring proper numeric comparison.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -144,7 +144,7 @@ jobs:
 
           # Exit with error code if there are errors
 
-          if [ "${ERRORS}" -gt "0" ]; then
+          if [ "${ERRORS}" -gt 0 ]; then
 
             exit 1
 
@@ -190,7 +190,7 @@ jobs:
 
           # Exit with error code if there are errors
 
-          if [ "${ERRORS}" -gt "0" ]; then
+          if [ "${ERRORS}" -gt 0 ]; then
 
             exit 1
 
