--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -98,6 +98,7 @@ jobs:
           PLAYWRIGHT_RETRIES: ${{ inputs.playwright-retries }}
           PLAYWRIGHT_BASE_URL: https://auro-connect-r9mk.onrender.com
         run: |
+          chmod +x ./../scripts/run-e2e-tests.sh
           ./../scripts/run-e2e-tests.sh
         
       - name: 📤 Upload E2E Test Results
