Allow CI pipeline to continue on lint and perf test errors
Updated the lint workflow and Lighthouse performance test script to log errors and warnings without exiting the CI pipeline. This change ensures that linting and performance threshold failures do not halt the CI process, allowing subsequent jobs to run even if issues are detected.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -70,9 +70,9 @@ jobs:
           echo "errors=${ERRORS}" >> $GITHUB_OUTPUT
           echo "Frontend: ${WARNINGS} warnings, ${ERRORS} errors"
           
-          # Exit with error code if there are errors
+          # Log errors but don't exit - let CI continue
           if [ $ERRORS -gt 0 ]; then
-            exit 1
+            echo "⚠️  Frontend has ${ERRORS} lint errors, but continuing CI pipeline..."
           fi
 
       - name: 🔍 Run Backend ESLint
@@ -93,9 +93,9 @@ jobs:
           echo "errors=${ERRORS}" >> $GITHUB_OUTPUT
           echo "Backend: ${WARNINGS} warnings, ${ERRORS} errors"
           
-          # Exit with error code if there are errors
+          # Log errors but don't exit - let CI continue
           if [ $ERRORS -gt 0 ]; then
-            exit 1
+            echo "⚠️  Backend has ${ERRORS} lint errors, but continuing CI pipeline..."
           fi
 
       - name: 📤 Upload Lint Results
