Improve Slack notification setup and diagnostics
Updated GitHub Actions workflows to use consistent secret names for Slack integration and added more detailed diagnostic output to the Slack notification script. The script now checks and reports the presence of required environment variables, provides clearer instructions when configuration is missing, and cleans up temporary files after execution.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,7 @@ on:
 
 env:
   NODE_VERSION: '18'
-  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
+  
 jobs:
   setup:
     name: 🔧 Setup & Dependencies
@@ -118,4 +117,6 @@ jobs:
     with:
       node-version: '18'
     secrets:
-      slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }} 
+      slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+      slack-token: ${{ secrets.SLACK_TOKEN }}
+      slack-channel: ${{ secrets.SLACK_CHANNEL }} 
