Enhance CI reporting with detailed test metrics
Adds job result inputs and detailed metrics parsing to CI and reporting workflows. The Slack notification script now extracts and summarizes E2E, unit test, and Lighthouse performance results from artifacts, providing richer feedback in Slack messages. The E2E test script outputs a clearer summary for easier parsing. These changes improve visibility into CI pipeline health and test outcomes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,10 @@ jobs:
     uses: ./.github/workflows/report.yml
     with:
       node-version: '18'
+      setup-result: ${{ needs.setup.result }}
+      lint-result: ${{ needs.lint.result }}
+      test-result: ${{ needs.test.result }}
+      performance-result: ${{ needs.performance.result }}
     secrets:
       slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
       slack-token: ${{ secrets.SLACK_TOKEN }}
