--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,19 @@
     "test:lighthouse": "node tests/performance/lighthouse-with-playwright.js",
     "test:lighthouse:ci": "node tests/performance/lighthouse-with-playwright.js --ci",
     "playwright:install": "playwright install",
-    "open:perf-reports": "npx http-server lighthouse-reports -o"
+    "open:perf-reports": "npx http-server lighthouse-reports -o",
+    "storybook": "storybook dev -p 6006",
+    "storybook:docker": "cd .. && npm run storybook:docker:compose",
+    "storybook:docker:build": "cd .. && docker build -f Dockerfile.storybook -t storybook-app .",
+    "storybook:docker:dev": "cd .. && npm run storybook:docker:compose",
+    "storybook:docker:stop": "cd .. && npm run storybook:docker:compose:down",
+    "build-storybook": "storybook build",
+    "test:visual": "playwright test --config=playwright.visual.config.js",
+    "test:visual:headed": "playwright test --config=playwright.visual.config.js --headed",
+    "test:visual:update": "playwright test --config=playwright.visual.config.js --update-snapshots",
+    "test:visual:ui": "playwright test --config=playwright.visual.config.js --ui",
+    "test:visual:report": "playwright show-report visual-test-results/html-report",
+    "test:visual:setup": "node scripts/visual-regression-setup.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.0",
@@ -63,8 +75,15 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.9.0",
     "@playwright/test": "^1.54.2",
+    "@storybook/addon-a11y": "^9.1.1",
+    "@storybook/addon-docs": "^9.1.1",
+    "@storybook/addon-onboarding": "^9.1.1",
+    "@storybook/addon-vitest": "^9.1.1",
+    "@storybook/react-vite": "^9.1.1",
+    "@storybook/test-runner": "^0.23.0",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -72,6 +91,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^30.0.5",
     "daisyui": "^4.12.10",
@@ -81,6 +102,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-storybook": "^9.1.1",
     "globals": "^15.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
@@ -89,8 +111,10 @@
     "nanoid": "^5.1.5",
     "playwright": "^1.48.2",
     "postcss": "^8.4.45",
+    "storybook": "^9.1.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.9.2",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^3.2.4"
   }
 }
